; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-ipc.c_on_tcp_child_process_read.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-ipc.c_on_tcp_child_process_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@UV_EOF = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [37 x i8] c"error recving on tcp connection: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"world\0A\00", align 1
@on_pipe_read_called = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [13 x i8] c"hello again\0A\00", align 1
@conn = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@tcp_connection_write_cb = common dso_local global i32 0, align 4
@tcp_conn_read_cb_called = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, %struct.TYPE_6__*)* @on_tcp_child_process_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_tcp_child_process_read(i32* %0, i64 %1, %struct.TYPE_6__* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca %struct.TYPE_6__, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_6__, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store %struct.TYPE_6__* %2, %struct.TYPE_6__** %6, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %26

12:                                               ; preds = %3
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* @UV_EOF, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %12
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @free(i32 %19)
  br label %58

21:                                               ; preds = %12
  %22 = load i64, i64* %5, align 8
  %23 = call i8* @uv_strerror(i64 %22)
  %24 = call i32 @printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i8* %23)
  %25 = call i32 (...) @abort() #4
  unreachable

26:                                               ; preds = %3
  %27 = load i64, i64* %5, align 8
  %28 = icmp sgt i64 %27, 0
  %29 = zext i1 %28 to i32
  %30 = call i32 @ASSERT(i32 %29)
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i64, i64* %5, align 8
  %35 = call i64 @memcmp(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 %33, i64 %34)
  %36 = icmp eq i64 %35, 0
  %37 = zext i1 %36 to i32
  %38 = call i32 @ASSERT(i32 %37)
  %39 = load i32, i32* @on_pipe_read_called, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* @on_pipe_read_called, align 4
  %41 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @free(i32 %43)
  %45 = call i32 @uv_buf_init(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 12)
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  store i32 %45, i32* %46, align 4
  %47 = bitcast %struct.TYPE_6__* %7 to i8*
  %48 = bitcast %struct.TYPE_6__* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %47, i8* align 4 %48, i64 4, i1 false)
  %49 = load i32*, i32** %4, align 8
  %50 = load i32, i32* @tcp_connection_write_cb, align 4
  %51 = call i32 @uv_write(i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @conn, i32 0, i32 0), i32* %49, %struct.TYPE_6__* %7, i32 1, i32 %50)
  store i32 %51, i32* %8, align 4
  %52 = load i32, i32* %8, align 4
  %53 = icmp eq i32 %52, 0
  %54 = zext i1 %53 to i32
  %55 = call i32 @ASSERT(i32 %54)
  %56 = load i32, i32* @tcp_conn_read_cb_called, align 4
  %57 = add nsw i32 %56, 1
  store i32 %57, i32* @tcp_conn_read_cb_called, align 4
  br label %58

58:                                               ; preds = %26, %16
  ret void
}

declare dso_local i32 @free(i32) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i8* @uv_strerror(i64) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @memcmp(i8*, i32, i64) #1

declare dso_local i32 @uv_buf_init(i8*, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #3

declare dso_local i32 @uv_write(i32*, i32*, %struct.TYPE_6__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
